feat: add update profile controller, route, & swagger
